fix: no border on mobile settings

--- a/helpers/kes.css
+++ b/helpers/kes.css
@@ -120,6 +120,9 @@ span.kes-update {
         grid-template-rows: min-content min-content min-content min-content;
         overflow: auto;
     }
+    #kes-settings {
+        border-bottom: 0px
+    }
     .kes-settings-modal-footer {
         padding: 0.4rem 0.2rem !important;
     }
